--- a/src/index.css
+++ b/src/index.css
@@ -12,15 +12,94 @@ code {
     monospace;
 }
 
+
+input[type=color] {
+  border: none;
+  bottom: 0;
+  right: 0;
+  position: relative;
+  height: 50%;
+  width: 50%;
+}
+
 table {
   padding: 2.5vh;
-  margin: auto;
 }
 
 td {
-  width: 23vh;
-  height: 23vh;
+  width: 5vh;
+  height: 5vh;
   font-size: 2em;
   font-weight: bold;
   text-align: center;
+}
+.spinner div {
+  position: absolute;
+  width: 50vh;
+  height: 50vh;
+  border: 1px solid #ccc;
+  background: rgba(255,255,255,0.8);
+  box-shadow: inset 0 0 10vh rgba(0,0,0,0.5);
+  text-align: center;
+  line-height: 50vh;
+  font-size: 100px;
+}
+
+.spinner .face1 { 
+    -webkit-transform: translateZ(25vh);
+    -ms-transform: translateZ(25vh);
+    transform: translateZ(25vh);
+}
+.spinner .face2 { 
+    -webkit-transform: rotateY(90deg) translateZ(25vh); 
+    -ms-transform: rotateY(90deg) translateZ(25vh); 
+    transform: rotateY(90deg) translateZ(25vh); 
+}
+.spinner .face3 { 
+    -webkit-transform: rotateY(90deg) rotateX(90deg) translateZ(25vh); 
+    -ms-transform: rotateY(90deg) rotateX(90deg) translateZ(25vh); 
+    transform: rotateY(90deg) rotateX(90deg) translateZ(25vh); 
+}
+.spinner .face4 { 
+    -webkit-transform: rotateY(180deg) rotateZ(90deg) translateZ(25vh); 
+    -ms-transform: rotateY(180deg) rotateZ(90deg) translateZ(25vh); 
+    transform: rotateY(180deg) rotateZ(90deg) translateZ(25vh); 
+}
+.spinner .face5 { 
+    -webkit-transform: rotateY(-90deg) rotateZ(90deg) translateZ(25vh); 
+    -ms-transform: rotateY(-90deg) rotateZ(90deg) translateZ(25vh); 
+    transform: rotateY(-90deg) rotateZ(90deg) translateZ(25vh); 
+}
+.spinner .face6 { 
+    -webkit-transform: rotateX(-90deg) translateZ(25vh); 
+    -ms-transform: rotateX(-90deg) translateZ(25vh); 
+    transform: rotateX(-90deg) translateZ(25vh); 
+}
+
+.spinner {
+  margin-left: 25vh;
+  margin-top: 10vh;
+  -webkit-animation: spincube 12s ease-in-out infinite;
+  animation: spincube 12s ease-in-out infinite;
+  -webkit-transform-style: preserve-3d;
+  -ms-transform-style: preserve-3d;
+  transform-style: preserve-3d;
+  -webkit-transform-origin: 25vh 25vh 0;
+  -ms-transform-origin: 25vh 25vh 0;
+  transform-origin: 25vh 25vh 0;
+}
+
+@-webkit-keyframes spincube {
+    16%      { -webkit-transform: rotateY(-90deg);                }
+    33%      { -webkit-transform: rotateY(-90deg) rotateZ(90deg); }
+    50%      { -webkit-transform: rotateY(180deg) rotateZ(90deg); }
+    66%      { -webkit-transform: rotateY(90deg) rotateX(90deg);  }
+    83%      { -webkit-transform: rotateX(90deg);                 }
+}
+@keyframes spincube {
+    16%      { -ms-transform: rotateY(-90deg); transform: rotateY(-90deg); }
+    33%      { -ms-transform: rotateY(-90deg) rotateZ(90deg); transform: rotateY(-90deg) rotateZ(90deg); }
+    50%      { -ms-transform: rotateY(180deg) rotateZ(90deg); transform: rotateY(180deg) rotateZ(90deg); }
+    66%      { -ms-transform: rotateY(90deg) rotateX(90deg); transform: rotateY(90deg) rotateX(90deg); }
+    83%      { -ms-transform: rotateX(90deg); transform: rotateX(90deg); }
 }
